fixed spacing on flat display

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -53,14 +53,17 @@ fieldset {border: 0}
 }
 
 #hierarchy {
-	padding: 10px;
+	width: 320px;
 	display: none;
 	float: left;
+	overflow: hidden;
+	background: pink;
 
 	ul {
-		margin: 10px;
-		margin-left: 25px;
+		margin: 0;
+		padding: 0;
 		list-style-type: none;
+		background: $lightgray;
 	}
 }
 
